Uncomment alternate language options in mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,14 +31,14 @@ theme:
 
 extra:
   homepage: https://phillycommunitywireless.org
-#  alternate:
-#    - name: English
-#      link: /en/latest
-#      lang: en
+  alternate:
+    - name: English
+      link: /en/latest
+      lang: en
 
-#    - name: Español
-#      link: /es/latest
-#      lang: es
+    - name: Español
+      link: /es/latest
+      lang: es
 
 markdown_extensions:
   - pymdownx.highlight
