pin python version to 3.10

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,9 @@ extra:
       lang: es
 
 markdown_extensions:
+  - meta
+  - tables
+  - admonition
   - pymdownx.highlight
   - pymdownx.superfences
   - meta
